[tool.poetry]
name = "13-1 введение в ооп"
version = "0.1.0"
description = ""
authors = ["Den <serge23023@gmial.com>"]
readme = "README.md"
packages = [{include = "13"}]

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
